--- a/FrontMoneyMentor/src/app/components/landigpage/landigpage.html
+++ b/FrontMoneyMentor/src/app/components/landigpage/landigpage.html
@@ -1,8 +1,7 @@
-
 <!-- podria cambiar en vez de a div para que ya no cuente como boton -->
 <header>
     <a href="#" class="logo">
-        <img src="../../../Img/logocortado.png" alt="Nombre del Logo">
+        <img src="/assets/img/logocortado.png" alt="Nombre del Logo">
     </a>
 
     <nav class="navbar">
@@ -14,16 +13,16 @@
             <li><a href="#questions">Preguntas</a></li>
             <li><a href="#contact">Contacto</a></li>
             <li><a href="#download">Descargar</a></li>
-            <li><a href="acceso.html">Inicio sesión</a></li>           
+            <li><a href="acceso.html">Inicio sesión</a></li>
             <li><a>|</a></li>
             <li><a routerLink="/usuarios/nuevo">Registro</a></li>
-        
+
         </ul>
     </nav>
-        <div class="fas fa-bars"></div>
-   
+    <div class="fas fa-bars"></div>
 
-  
+
+
 
 
 </header>
@@ -33,7 +32,8 @@
 <section class="home" id="home">
     <div class="content">
         <h1>Bienvenido(a) a Moneymentor</h1>
-        <p>¡Tu futuro financiero comienza hoy!<br>Descubre cómo tomar el control de tus finanzas, ahorrar con propósito y alcanzar tus<br>
+        <p>¡Tu futuro financiero comienza hoy!<br>Descubre cómo tomar el control de tus finanzas, ahorrar con propósito
+            y alcanzar tus<br>
             metas. ¡Es hora de hacer crecer tu dinero de forma inteligente y divertida!
         </p>
         <button onclick="location.href='#nosotros'" id="ali"> Empezar</button>
@@ -51,32 +51,33 @@
 
         <div class="box-container">
             <div class="box">
-                <img src="../../../Img/ayudamos.png" alt="">
+                <img src="/assets/img/ayudamos.png" alt="">
                 <h3>Cómo ayudamos </h3>
                 <p>
-                    Simplificamos la gestión financiera de los jóvenes, ofreciendo herramientas 
+                    Simplificamos la gestión financiera de los jóvenes, ofreciendo herramientas
                     intuitivas y personalizadas para un mejor control de sus recursos.
                 </p>
             </div>
-    
+
             <div class="box">
-                <img src="../../../Img/hacemos.png" alt="">
+                <img src="/assets/img/hacemos.png" alt="">
                 <h3>Qué hacemos</h3>
                 <p>
-                    Creamos una plataforma innovadora que integra presupuestos personalizados, seguimiento 
+                    Creamos una plataforma innovadora que integra presupuestos personalizados, seguimiento
                     de gastos y consejos de ahorro para una gestión financiera integral.
                 </p>
-    
+
             </div>
-    
+
             <div class="box">
-                <img src="../../../Img/final.png" alt="">
+                <img src="/assets/img/final.png" alt="">
                 <h3>Misión y Visión</h3>
                 <p>
-                    Empoderamos a jóvenes para tomar control financiero. Promovemos estabilidad económica y crecimiento sostenible.                </p>
-    
+                    Empoderamos a jóvenes para tomar control financiero. Promovemos estabilidad económica y crecimiento
+                    sostenible. </p>
+
             </div>
-            
+
         </div>
 
     </div>
@@ -88,37 +89,39 @@
 
     <div class="content">
         <h2>Servicios Destacados</h2>
-        <p> Descubre cómo nuestra plataforma puede ayudarte a tomar el control de tus finanzas y alcanzar tus objetivos económicos de manera inteligente y eficaz. </p>
+        <p> Descubre cómo nuestra plataforma puede ayudarte a tomar el control de tus finanzas y alcanzar tus objetivos
+            económicos de manera inteligente y eficaz. </p>
 
         <div class="box-container">
             <div class="box">
-                <img src="../../../Img/planeacion.png" alt=""> 
+                <img src="/assets/img/planeacion.png" alt="">
                 <h3>Presupuestos personalizados</h3>
                 <p>
-                    Personaliza tus presupuestos para una gestión efectiva de gastos, adaptados a tus necesidades individuales.
+                    Personaliza tus presupuestos para una gestión efectiva de gastos, adaptados a tus necesidades
+                    individuales.
                 </p>
             </div>
-    
+
             <div class="box">
-                <img src="../../../Img/seguimiento.png" alt="">
+                <img src="/assets/img/seguimiento.png" alt="">
                 <h3>Seguimiento de gastos </h3>
                 <p>
                     Registra tus ingresos y gastos con análisis detallados y visualizaciones
                     para entender tus hábitos financieros y tomar decisiones informadas
                 </p>
-    
+
             </div>
-    
+
             <div class="box">
-                <img src="../../../Img/ahorro.png" alt="">
+                <img src="/assets/img/ahorro.png" alt="">
                 <h3>Cosejos de ahorro</h3>
                 <p>
                     Obtén consejos personalizados para ahorrar e invertir de manera inteligente,
                     alcanzando tus metas financieras a corto y largo plazo.
                 </p>
-    
+
             </div>
-            
+
         </div>
 
 
@@ -128,18 +131,19 @@
 
 
 <section class="review" id="review">
-  <h2>Testimonios</h2>
-  <p> Escucha lo que nuestros usuarios dicen sobre cómo MoneyMentor ha transformado su vida financiera, ayudándolos a <br>
-    gestionar su dinero de manera más inteligente y a alcanzar sus metas con mayor tranquilidad y confianza.</p>
+    <h2>Testimonios</h2>
+    <p> Escucha lo que nuestros usuarios dicen sobre cómo MoneyMentor ha transformado su vida financiera, ayudándolos a
+        <br>
+        gestionar su dinero de manera más inteligente y a alcanzar sus metas con mayor tranquilidad y confianza.</p>
 
     <div class="box-container">
 
         <!--bir-->
         <div class="box">
-            <img src="../../../Img/TestimonioPersona2 (1).jpg" alt="">
+            <img src="/assets/img/TestimonioPersona2 (1).jpg" alt="">
             <h3>Alejandro R.</h3>
-            <p> “MoneyMentor me ha permitido organizar 
-                mis finanzas de una manera que nunca 
+            <p> “MoneyMentor me ha permitido organizar
+                mis finanzas de una manera que nunca
                 pensé posible. Ahora puedo ahorrar para <br>
                 mis metas sin sentir que me estoy <br>
                 privando de lo esencial”
@@ -149,11 +153,11 @@
 
         <!--daf-->
         <div class="box">
-            <img src="../../../Img/TestimonioPersona1 (1).webp" alt="">
+            <img src="assets/img/TestimonioPersona1 (1).webp" alt="">
             <h3>Katy P.</h3>
-            <p> "Con MoneyMentor, finalmente entiendo 
-                cómo gestionar mi presupuesto mensual. 
-                Antes siempre llegaba a fin de mes con 
+            <p> "Con MoneyMentor, finalmente entiendo
+                cómo gestionar mi presupuesto mensual.
+                Antes siempre llegaba a fin de mes con
                 dificultades, pero ahora tengo un plan claro <br>
                 y me siento en control."
             </p>
@@ -162,10 +166,10 @@
 
         </div>
 
-     <!--otra-->
+        <!--otra-->
 
         <div class="box">
-            <img src="../../../Img/TestimonioPersona3 (1).jpg" alt="">
+            <img src="assets/img/TestimonioPersona3 (1).jpg" alt="">
             <h3>Pedro Pablo K.</h3>
             <p> "Gracias a MoneyMentor, logré salir de <br>
                 mis deudas más rápido de lo que <br>
@@ -188,17 +192,21 @@
     <div class="faq-container">
         <div class="faq-box">
             <h3>¿Qué es MoneyMentor?</h3>
-            <p>MoneyMentor es una plataforma de planificación financiera para jóvenes en la que encontraras diversas funcionalidades que te permitiran gestionar tus financias de manera sencilla y optimizada.</p>
+            <p>MoneyMentor es una plataforma de planificación financiera para jóvenes en la que encontraras diversas
+                funcionalidades que te permitiran gestionar tus financias de manera sencilla y optimizada.</p>
         </div>
 
         <div class="faq-box">
             <h3>¿Cuánto cuesta Moneymentor?</h3>
-            <p>Nuestro plataforma y aplicación es totalmente gratuital! Disfruta de una gestión adecuada de tus finanzas, contenido didáctico en la plataforma e Interactua con otros usuarios para aprender más!</p>
+            <p>Nuestro plataforma y aplicación es totalmente gratuital! Disfruta de una gestión adecuada de tus
+                finanzas, contenido didáctico en la plataforma e Interactua con otros usuarios para aprender más!</p>
         </div>
 
         <div class="faq-boxx">
             <h3>¿Cómo funciona Moneymentor?</h3>
-            <p>MoneyMentor ofrece diversas funcionalidades para que nuestros usuarios puedan controlar sus finanzas. Entre ellas se encuentra el calendario de eventos de pagos, la calculadora financiera, el foro comunitario, el apartado educativo y mucho más!!</p>
+            <p>MoneyMentor ofrece diversas funcionalidades para que nuestros usuarios puedan controlar sus finanzas.
+                Entre ellas se encuentra el calendario de eventos de pagos, la calculadora financiera, el foro
+                comunitario, el apartado educativo y mucho más!!</p>
         </div>
 
     </div>
@@ -209,13 +217,15 @@
 </section>
 
 <section class="download" id="download">
-    <img src="../../../Img/descargarApp1.jpeg" alt="Imagen superior derecha" class="top-right-image">
+    <img src="assets/img/descargarApp1.jpeg" alt="Imagen superior derecha" class="top-right-image">
     <div class="content-box">
         <h1>Descarga MoneyMentor y mejora tus <br>finanzas</h1>
-        <p>Accede a herramientas avanzadas de planificación financiera y alertas en tiempo real directamente desde tu <br>
-            celular. Disponible para iOS y Android, MoneyMentor te guía en cada paso para que puedas administrar tus <br>
+        <p>Accede a herramientas avanzadas de planificación financiera y alertas en tiempo real directamente desde tu
+            <br>
+            celular. Disponible para iOS y Android, MoneyMentor te guía en cada paso para que puedas administrar tus
+            <br>
             finanzas con confianza. ¡Descargala gratis y comienza a tomar control de tu futuro financiero hoy mismo!</p>
-        <img src="../../../Img/decargarApp2.png" alt="Google Play">
+        <img src="assets/img/decargarApp2.png" alt="Google Play">
     </div>
 </section>
 
@@ -223,7 +233,7 @@
 <section class="contact" id="contact">
 
     <h2 class="heading">Contacto</h2>
-    <p>¿Tienes preguntas o necesitas asistencia? Ponte en contacto con el equipo de MoneyMentor. 
+    <p>¿Tienes preguntas o necesitas asistencia? Ponte en contacto con el equipo de MoneyMentor.
         Estamos aquí para ayudarte.</p>
     <div class="row">
         <div class="form-container">
@@ -232,8 +242,8 @@
                 <input type="text" placeholder="Nombre">
                 <input type="email" placeholder="Correo">
                 <input type="number" placeholder="Telefono">
-                <textarea cols="15" rows="5" placeholder="Mensaje"></textarea >
-                <input type="submit" value="Enviar">        
+                <textarea cols="15" rows="5" placeholder="Mensaje"></textarea>
+                <input type="submit" value="Enviar">
             </form>
 
         </div>
@@ -246,9 +256,9 @@
         <div class="footer-content">
             <!-- Logo y descripción -->
             <div class="footer-logo-description">
-                <img src="../../../Img/logomm.png" alt="MoneyMentor Logo" class="footer-logo">
+                <img src="assets/img/logomm.png" alt="MoneyMentor Logo" class="footer-logo">
                 <p>
-                    Con MoneyMentor, gestiona tus finanzas con confianza y seguridad en cada decisión que tomas. 
+                    Con MoneyMentor, gestiona tus finanzas con confianza y seguridad en cada decisión que tomas.
                     Tu bienestar financiero es nuestra prioridad, 24/7.
                 </p>
             </div>
@@ -290,41 +300,41 @@
     const navbar = document.querySelector('.navbar');
 
     menuToggle.addEventListener('click', () => {
-    navbar.classList.add('nav-toggle');
-    menuToggle.style.display = 'none';
-    menuClose.style.display = 'block';
+        navbar.classList.add('nav-toggle');
+        menuToggle.style.display = 'none';
+        menuClose.style.display = 'block';
     });
 
     menuClose.addEventListener('click', () => {
-    navbar.classList.remove('nav-toggle');
-    menuToggle.style.display = 'block';
-    menuClose.style.display = 'none';
+        navbar.classList.remove('nav-toggle');
+        menuToggle.style.display = 'block';
+        menuClose.style.display = 'none';
     });
 
-    $(document).ready(function() {
+    $(document).ready(function () {
 
-        $('.fa-bars').click(function() {
+        $('.fa-bars').click(function () {
 
             $(this).toggleClass('fa-times');
             $('.navbar').toggleClass('nav-toggle');
 
         });
 
-        $(window).on('scroll load', function() {
+        $(window).on('scroll load', function () {
 
             $('.fa-bars').removeClass('fa-times');
             $('.navbar').removeClass('nav-toggle');
 
-            $('section').each(function() {
+            $('section').each(function () {
 
                 var id = $(this).attr('id');
                 var height = $(this).height();
-                var offset = $(this).offset().top -200;
+                var offset = $(this).offset().top - 200;
                 var top = $(window).scrollTop();
 
-                if(top >= offset && top < offset + height) {
+                if (top >= offset && top < offset + height) {
                     $('.navbar ul li a').removeClass('active');
-                    $('.navbar').find('[href="#'+id+'"]').addClass('active');
+                    $('.navbar').find('[href="#' + id + '"]').addClass('active');
                 }
 
             });
@@ -334,4 +344,3 @@
     });
 
 </script>
-
