--- a/FrontMoneyMentor/src/app/components/impuestooperacion/impuestooperacion-list/impuestooperacion.html
+++ b/FrontMoneyMentor/src/app/components/impuestooperacion/impuestooperacion-list/impuestooperacion.html
@@ -49,7 +49,7 @@
         </table>
 
         <mat-paginator
-            [length]="dataSource?.data?.length || 0"
+            [length]="dataSource.data.length || 0"
             [pageSize]="5"
             [pageSizeOptions]="[5, 10, 20]"
             showFirstLastButtons>
