--- a/FrontMoneyMentor/src/app/components/recursousuario/recursousuario-listar/recursousuario-listar.html
+++ b/FrontMoneyMentor/src/app/components/recursousuario/recursousuario-listar/recursousuario-listar.html
@@ -49,7 +49,7 @@
         </table>
 
         <!-- Paginador -->
-        <mat-paginator [length]="dataSource?.data?.length || 0" [pageSize]="5" [pageSizeOptions]="[5, 10, 20]"
+        <mat-paginator [length]="dataSource.data.length || 0" [pageSize]="5" [pageSizeOptions]="[5, 10, 20]"
             showFirstLastButtons>
         </mat-paginator>
 
