--- a/FrontMoneyMentor/src/app/components/roles/rol-listar/rol-listar.html
+++ b/FrontMoneyMentor/src/app/components/roles/rol-listar/rol-listar.html
@@ -46,7 +46,7 @@
     </table>
 
     <mat-paginator
-      [length]="dataSource?.data?.length || 0"
+      [length]="dataSource.data.length || 0"
       [pageSize]="5"
       [pageSizeOptions]="[5, 10, 20]"
       showFirstLastButtons>
