--- a/FrontMoneyMentor/src/app/components/operacion/operacionregistrar/operacionregistrar.css
+++ b/FrontMoneyMentor/src/app/components/operacion/operacionregistrar/operacionregistrar.css
@@ -1,34 +1,54 @@
-.form-container {
-  width: 450px;
-  margin: 40px auto;
-  padding: 25px;
-  text-align: center;
-  border-radius: 12px;
-  background: #fafafa;
+
+.container h2 {
+    font-size: 35px;
+    font-weight: 700;
+    text-align: center;
+    color: #000000;
+    margin-bottom: 25px;
 }
 
-h2 {
-  font-size: 22px;
-  margin-bottom: 20px;
-  font-weight: bold;
+.form-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 25px 40px;  
+    justify-content: center;
+    align-items: center;
+    max-width: 700px;
+    margin: 0 auto;
 }
 
-.full-width {
-  width: 100%;
-  margin-bottom: 15px;
+mat-form-field {
+    width: 90%;
 }
 
-.button-container {
-  margin-top: 20px;
+.botones {
+    display: flex;
+    justify-content: center;
+    margin-top: 25px;
 }
 
-.action-btn {
-  background-color: #1976d2;
-  color: white;
-  padding: 10px 30px;
-  border-radius: 25px;
+button[mat-raised-button] {
+    background-color: #FF8343;
+    color: white;
+    border: none;
+    padding: 0.6rem 0;
+    font-size: 1.1rem;
+    border-radius: 0.375rem;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    width: 30%;               
+    display: block;
+    margin: 0 auto;           
 }
 
-.action-btn:hover {
-  background-color: #145a9e;
+button[mat-raised-button]:hover {
+    background-color: #ff6b1f;
+}
+.insert-card {
+    max-width: 700px;
+    margin: 60px auto;
+    padding: 20px;
+    text-align: center;
+    border-radius: 16px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
 }
