--- a/FrontMoneyMentor/src/app/components/menu/menu.html
+++ b/FrontMoneyMentor/src/app/components/menu/menu.html
@@ -24,6 +24,10 @@
     <button mat-button aria-label="example icon-button with menu icon" [matMenuTriggerFor]="menuRecursos">
       <mat-icon> menu </mat-icon>Recursos</button>
 
+    <button mat-button aria-label="example icon-button with menu icon" [matMenuTriggerFor]="menuAhorroADMIN">
+      <mat-icon> menu </mat-icon>Reporte Ahorro
+    </button>
+
     <button mat-button aria-label="example icon-button with menu icon" [matMenuTriggerFor]="menuBalanceADMIN">
       <mat-icon> menu </mat-icon>Reporte Balance
     </button>
@@ -85,8 +89,13 @@
 
   <mat-menu #menuBalanceADMIN="matMenu">
     <button mat-menu-item routerLink="/app/balance">Listar Balance</button>
-        <button mat-menu-item routerLink="/app/listarmes">Reporte ingresos por mes</button>
+    <button mat-menu-item routerLink="/app/listarmes">Reporte ingresos por mes</button>
   </mat-menu>
+
+  <mat-menu #menuAhorroADMIN="matMenu">
+        <button mat-menu-item routerLink="/app/ahorro-periodo">Reporte ahorro por periodo</button>
+  </mat-menu>
+
   <mat-menu #menuAhorro="matMenu">
     <button mat-menu-item routerLink="/app/ahorro">Listar Ahorros</button>
     <button mat-menu-item routerLink="/app/ahorro/nuevo">Registrar Ahorro</button>
@@ -116,7 +125,6 @@
     <button mat-menu-item routerLink="/app/sumaxusuario">Reporte 2</button>
     <button mat-menu-item routerLink="/app/impuestomonto">Reporte 3</button>
     <button mat-menu-item routerLink="/app/sumaahorros">Reporte 4</button>
-    <button mat-menu-item routerLink="/app/ahorro-periodo">Reporte 5</button>
 
   </mat-menu>
   <mat-menu #menuroles="matMenu">
